--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova-android": "^8.0.0",
+        "cordova-plugin-battery-status": "^2.0.2",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-battery-status": {}
         },
         "platforms": [
             "android"
