--- a/vue-src/package.json
+++ b/vue-src/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuex": "^3.1.0",
     "vux": "^2.9.2"
   },
   "devDependencies": {
